--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,113 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  font-family: 'Raleway', sans-serif;
+  margin: 0px;
+}
+/* Color Theme Swatches in Hex */
+.Graphic-Design-1-hex { color: #222626; }
+.Graphic-Design-2-hex { color: #F2CB05; }
+.Graphic-Design-3-hex { color: #8C7503; }
+.Graphic-Design-4-hex { color: #F2DF80; }
+.Graphic-Design-5-hex { color: #735702; }
+
+body{/*
+  background:  #F2CB05;
+  */
+  background-image:  radial-gradient(circle,#F2CB05,#ffbb00);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header{
+  align-content: center;
+  border-bottom: 1px solid black;
+  background-color:  #222626;
+}
+header img {
+  padding: 15px;
+  padding-left: 30px;
+  width: 150px;
+}
+first{
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -70px;
+  margin-left: -190px;
+  width: 400px;
+  height: 100px;
+  text-align: center;
+  letter-spacing: 2px;
+}
+home{
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -100px;
+  margin-left: -250px;
+  width: 500px;
+  height: 100px;
+  text-align: center;
+  letter-spacing: 2px;
+}
+.container{
+  max-width: 300px;
+  margin: 100px auto 40px;
+}
+ .home-text{
+  font-size: 40px;
+  font-weight: bolder;
+  padding: 0px;
+  margin-bottom: 20px;
+}
+ul{
+  font-family: 'Raleway', sans-serif;
+  list-style-type: none;
+  text-decoration: none;
+  margin: 20px;
+  padding: 0px;
+}
+li{
+  font-size: 20px;
+  margin: 2px;
+  cursor: pointer;
+}
+li span.active{
+  font-weight: bold;
+}
+li span.active::before{
+  content: '>';
+  position: relative;
+  top: -2px;
+  margin-right: 6px;
+  transform: scale(0.8, 1);
+  display: inline-block;
+}
+.heading{
+  font-size: 25px;
+  font-weight: bold;
+  border-bottom: 1px solid rgba(0,0,0,30%);
+  padding-bottom: 3px;
+  margin: 0px;
+}
+button{
+  font-family: 'Raleway', sans-serif;
+  padding: 12px 22px;
+  font-size: 15px;
+  font-weight: bold;
+  border-radius: 30px;
+  border-color: #222626;
+  background-color: transparent ;
+  cursor: pointer;
+  opacity: 1;
+}
+.button-start{
+  font-family: 'Raleway', sans-serif;
+  padding: 20px;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 50px;
+  border-color: #222626;
+  background-color: transparent ;
+  cursor: pointer;
+  opacity: 1;
 }
